# BugPet

./: .gitignore  LICENSE  Package.swift  README.md  TRAESOLO_HANDOFF.md  index.html  package-lock.json  package.json  vite.config.ts
.codex/environments/: environment.toml
Sources/BugPetNative/: ActivityMonitor.swift  AppDelegate.swift  CodingStatsStore.swift  ControlPanelViewController.swift  GrowthEngine.swift  Main.swift  PetAssetCatalog.swift  PetCoordinator.swift  PetModels.swift  PetRootView.swift  PetScene.swift  PetSpriteView.swift  PetStateEngine.swift  PetWindowController.swift  PreferencesStore.swift  SpeechBubbleView.swift  SpeechCatalog.swift
docs/: PROJECT_CONTEXT.md  WEBSITE_BRIEF.md
scripts/: package_app.sh  package_dmg.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/utils/: activityMonitor.ts  growth.ts  petVoices.ts  stateEngine.ts
